--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     line-height: 1.25;
 }
 
-.radioFilter {
+.radioBtn {
     display: flex;
     flex-direction: column;
     justify-content: left;
