--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*=== GLOBAL === */
 *,
 *::before,
 *::after {
@@ -28,6 +29,7 @@ body {
     line-height: 1.25;
 }
 
+/*=== CONTAINER === */
 .container {
     width: 100%;
     max-width: 500px;
@@ -54,7 +56,7 @@ body {
     box-shadow: 1px 1px 20px 20px rgba(255, 170, 251, 0.479);
 }
 
-
+/*=== FILTER BUTTON === */
 .radioBtn {
     cursor: pointer;
     display: flex;
@@ -72,6 +74,7 @@ body {
     border-radius: 25px;
 }
 
+/*=== USER INPUT FIELD & ADD BUTTON === */
 .inputAddBtn {
     display: flex;
     justify-content: space-between;
@@ -102,6 +105,7 @@ body {
     border-radius: 25px;
 }
 
+/*=== TODO LIST === */
 .todoList {
     display: flex;
     flex-direction: column;
@@ -121,6 +125,7 @@ li {
     color: rgb(224, 183, 198);
 }
 
+/*=== REMOVE BUTTON === */
 #removeDoneBtn {
     display: flex;
     justify-content: center;
