--- a/style.css
+++ b/style.css
@@ -29,21 +29,22 @@ body {
     padding: 15px;
 }
 
-/* === BOX === */
-.box.glow {
-    box-shadow: 1px 1px 20px 20px rgba(255, 170, 251, 0.479);
-}
 
+/* === BOX === */
 .box {
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: flex-center;
     background: rgba(198, 192, 222, 0.062);
     padding: 40px 45px 60px;
     border: 2px solid rgb(235, 239, 245);
     border-radius: 20px;
     box-shadow: var(--box-shadow);
+}
+
+.box.glow {
+    box-shadow: 1px 1px 20px 20px rgba(255, 170, 251, 0.479);
 }
 
 /* === HEADER === */
@@ -76,8 +77,9 @@ h1 {
 .inputAddBtn {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     width: 100%;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -98,10 +100,10 @@ h1 {
     outline: none;
     background: var(--primary-color);
     padding: 10px 20px;
-    margin: 0px 10px 0px;
     color: var(--secondary-color);
     font-size: 1rem;
     border-radius: 15px;
+    width: 150px;
 }
 
 /* === REMOVE BTN === */
@@ -114,6 +116,7 @@ h1 {
     color: var(--secondary-color);
     font-size: 1rem;
     border-radius: 15px;
+    width: 150px;
 }
 
 /* === TODO LIST === */
@@ -134,6 +137,3 @@ li {
     font-size: 1rem;
     color: var(--secondary-color);
 }
-
-/* === RESPONSIVE DESIGN === */
-/* MEDIA QUERIES */
